<resources>
    <string name="app_name">Miku UI Built-in Browser</string>
    <string name="webpage_non_title">No title</string>
    <string name="tip_loading">Loading...</string>
    <string name="tip_error">Something went wrong...</string>
    <string name="mubb_settings_title">MUBB Settings</string>
    <string name="switch_javascript">Enable JavaScript</string>
    <string name="switch_javascript_summary">Allow MUBB to execute JavaScript</string>
    <string name="switch_zoom">Enable Zoom</string>
    <string name="switch_zoom_summary">Allow MUBB to zoom the webpage</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>